--- a/_sass/modules/_nav-bar.scss
+++ b/_sass/modules/_nav-bar.scss
@@ -1,8 +1,6 @@
 .nav-bar {
   width: 100%;
   height: 80px;
-  display: flex;
-  align-items: center;
 
   .container {
     align-items: center;
@@ -13,8 +11,6 @@
 	&.is-open {
     .nav-bar-wrapper {
       position: fixed;
-      display: flex;
-      align-items: center;
       height: 80px;
     }
 	}
@@ -23,5 +19,8 @@
 .nav-bar-wrapper {
   position: relative;
   width: 100%;
+  height: 100%;
   z-index: 10000;
+  display: flex;
+  align-items: center;
 }
